# Anomaly-Detector-Project

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  README.md  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  mainTrain.cpp  minCircle.cpp  minCircle.h  output.txt  tester.csv  tester2.csv  timeseries.cpp  timeseries.h
